--- a/stylesheets/partials/_breakpoints.scss
+++ b/stylesheets/partials/_breakpoints.scss
@@ -66,7 +66,6 @@ footer {
 
 @media (min-width: 400px) and (max-width: 920px) {
     header {
-      
 
         .searchbar-big {
             position: relative;
@@ -83,5 +82,8 @@ footer {
 @media (min-width: 920px) {
     #searchbar-small {
         display: none;
+    }
+    .search-holder {
+      display: none;
     }
 }
